Fix build excludes for git

--- a/WeatherTV/Gemfile
+++ b/WeatherTV/Gemfile
@@ -2,6 +2,6 @@ source 'https://rubygems.org'
 
 gem 'rake'
 # Add your dependencies here:
-gem 'bubble-wrap', '~> 1.9.6'
+gem 'bubble-wrap' #, '~> 1.9.6'
 gem 'motion-cocoapods'
 gem 'ProMotion'
