--- a/WeatherTV/Rakefile
+++ b/WeatherTV/Rakefile
@@ -11,6 +11,7 @@ end
 Motion::Project::App.setup do |app|
   # Use `rake config' to see complete project settings.
   app.name = 'WeatherTV'
+  app.deployment_target = "10.1"
   app.fonts = ['Climacons.ttf']
   app.frameworks += %w(CoreLocation)
   app.pods do
