Update the WeatherTV app

--- a/WeatherTV/Rakefile
+++ b/WeatherTV/Rakefile
@@ -1,5 +1,6 @@
 # -*- coding: utf-8 -*-
 $:.unshift("/Library/RubyMotion/lib")
+$:.unshift("~/.rubymotion/rubymotion-templates")
 require 'motion/project/template/tvos'
 
 begin
@@ -11,9 +12,9 @@ end
 Motion::Project::App.setup do |app|
   # Use `rake config' to see complete project settings.
   app.name = 'WeatherTV'
-  app.deployment_target = "10.1"
   app.fonts = ['Climacons.ttf']
   app.frameworks += %w(CoreLocation)
+  app.detect_dependencies = true
   app.pods do
     pod 'CZWeatherKit'
   end
